--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "migrate": "knex migrate:latest",
     "test": "node --test .",
     "lint": "eslint . && prettier -w .",
     "prepare": "husky install",
@@ -23,7 +24,7 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "joi": "^10.6.0",
     "jsonwebtoken": "^9.0.2",
