--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,10 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       NODE_ENV: ${NODE_ENV}
-      PORT: ${PORT}
+      PORT: 3001
+      JWT_SECRET: ${JWT_SECRET}
     ports:
-      - "3001:${PORT}"
+      - "${PORT}:3001"
     command: node server.js
     volumes:
       - .:/app/
@@ -22,7 +23,7 @@ services:
   postgres:
     image: postgres:16-alpine
     expose:
-      - ${DB_PORT}
+      - 5432
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
