--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "dependencies": {
     "@koa/cors": "^4.0.0",
+    "@koa/ejs": "^5.1.0",
     "@koa/router": "^12.0.1",
+    "@ladjs/koa-views": "^9.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "joi": "^10.6.0",
