--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@koa/cors": "^5.0.0",
     "@koa/ejs": "^5.1.0",
+    "@koa/multer": "^3.0.2",
     "@koa/router": "^12.0.1",
     "@ladjs/koa-views": "^9.0.0",
     "bcryptjs": "^2.4.3",
@@ -36,6 +37,8 @@
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
     "koa-joi-validate": "^0.5.1",
+    "koa-static": "^5.0.0",
+    "md5": "^2.3.0",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
   }
