--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@koa/router": "^12.0.1",
     "@ladjs/koa-views": "^9.0.0",
     "bcryptjs": "^2.4.3",
+    "commander": "^12.0.0",
     "dotenv": "^16.3.1",
     "joi": "^10.6.0",
     "jsonwebtoken": "^9.0.2",
